# Ohe

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: icon_placeholder.txt
config/: calibration.json  default.yaml
installer/: README.md  ohe_setup.iss
ohe/: __init__.py  cli.py
ohe/core/: __init__.py  bus.py  config.py  exceptions.py  models.py
ohe/events/: __init__.py  clip_writer.py
ohe/geo/: __init__.py  provider.py
ohe/ingestion/: __init__.py  base.py  camera.py  video_file.py
ohe/logging_/: __init__.py  csv_writer.py  export.py  log_worker.py  session.py
ohe/processing/: __init__.py  calibration.py  detector.py  measurement.py  pipeline.py  preprocess.py
ohe/rules/: __init__.py  engine.py  thresholds.py
ohe/speed/: __init__.py  provider.py
ohe/ui/: anomaly_panel.py  app.py  calibration_wizard.py  config_dialog.py  event_detail_widget.py  event_list_panel.py  event_player_dialog.py  main_window.py  pipeline_worker.py  plot_panel.py  session_setup_dialog.py  share_dialog.py  video_panel.py  widgets.py
output/: stagger_measurements.csv
scripts/: build_exe.ps1  build_installer.ps1  run_classical_cv.py  run_classical_cv_v2.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_session_log.py
tests/unit/: test_bus.py  test_calibration.py  test_clip_writer.py  test_config.py  test_detector.py  test_events_export.py  test_geo_provider.py  test_log_worker.py  test_measurement.py  test_models.py  test_preprocess.py  test_rules.py  test_speed_provider.py  test_track_storage.py
tools/: debug_visualiser.py
(+10 files in other folders)
