[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ohe"
version = "0.1.0"
description = "OHE Stagger & Wire Diameter Measurement System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amit Thakur" }]

dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.1",
    "ruff>=0.3.0",
]

[project.scripts]
ohe = "ohe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ohe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
